--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
 <body>
   <div id="root"></div>
   <!-- <script src="/common.js"></script> -->
+  <script src="/roadhog.dll.js"></script>
   <script src="/index.js"></script>
 </body>
 </html>
