--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>dva-admin</title>
-  <link rel="stylesheet" href="/index.css" />
+  <!-- <link rel="stylesheet" href="/index.css" /> -->
   <link rel="icon" href="http://www.newband.com/images1/favicon.ico" type="image/x-icon">
   <!--[if lte IE 10]>
       <script
@@ -14,7 +14,6 @@
 </head>
 <body>
   <div id="root"></div>
-  <!-- <script src="/common.js"></script> -->
   <script src="/roadhog.dll.js"></script>
   <script src="/index.js"></script>
 </body>
